[package]
name = "aoc"
version = "2015.0.0"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.32"
image = "0.25.10"
imageproc = "0.26.2"
indicatif = "0.18.4"
lazy_static = "1.5.0"
md5 = "0.8.0"
ndarray = "0.17.2"
pathfinding = "4.15.0"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["blocking"] }
tempfile = "3.27.0"

[[bin]]
name = "advent_of_code_2015"
path = "src/main.rs"
