[package]
name = "AdventOfCode2022"
version = "0.0.1"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.*"

[[bin]]
name = "advent_2022"
path = "src/main.rs"
