[package]
name = "AdventOfCode2023"
version = "0.0.1"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
itertools = "0.10.5"
lazy_static = "1.4.*"
lru-cache = "0.1.2"
ndarray = "0.15.6"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bin]]
name = "advent_2023"
path = "src/main.rs"
