[package]
name = "AdventOfCode2024"
version = "0.0.1"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.9"
lazy_static = "1.5.0"
ndarray = "0.16.1"
regex = "1.11.1"
reqwest = { version="0.12.9", features = ["blocking"] }

# DEPENDS FROM 2023
#chrono = "0.4.31"
#lru-cache = "0.1.2"
#num-integer = "0.1.45"
#rand = "0.8.5"
#rayon = "1.8.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"

[[bin]]
name = "advent_2024"
path = "src/main.rs"
