[package]
name = "aoc"
version = "2024.0.0"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
indicatif = { version = "0.17.9", features = ["rayon"]}
lazy_static = "1.5.0"
lru = "0.12.5"
ndarray = "0.16.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

# DEPENDS FROM 2023
#chrono = "0.4.31"
#num-integer = "0.1.45"
#rand = "0.8.5"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"

[[bin]]
name = "advent_of_code_2024"
path = "src/main.rs"
