[package]
name = "aoc"
version = "2025.0.0"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.29"
image = "0.25.5"
imageproc = "0.25.0"
indicatif = "0.18.3"
lazy_static = "1.5.0"
ndarray = "0.16.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
tempfile = "3.14.0"

# useful crates from prior years
#pathfinding = "4.12.0"
#rayon = "1.10.0"
#lru = "0.12.5"

[[bin]]
name = "advent_of_code_2025"
path = "src/main.rs"
