[package]
name = "aoc"
version = "2025.0.0"
authors = ["Teque5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.32"
image = "0.25.10"
imageproc = "0.26.2"
indicatif = "0.18.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
ndarray = "0.17.2"
pathfinding = "4.15.0"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["blocking"] }
tempfile = "3.27.0"

# useful crates from prior years
#rayon = "1.10.0"
#lru = "0.16.3"

[[bin]]
name = "advent_of_code_2025"
path = "src/main.rs"
